--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,3 +17,13 @@ ru:
     form:
       submit:
         '%{action} статью'
+  categories:
+    index:
+      title: 'Категории'
+    new:
+      title: 'Новая категория'
+    edit:
+      title: 'Редактирование категории'
+    form:
+      submit:
+        '%{action} категорию'
