--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -1,4 +1,4 @@
-ru:
+ ru:
   activerecord:
     models:
       post: 'Статья'
@@ -10,6 +10,7 @@ ru:
         all_tags: 'Теги'
       category:
         name: 'Название'
+        parent_id: 'Категория родитель'
     errors:
       messages:
         blank: 'не может быть пустым'
